<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imgUserPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_main_Username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Switch
        android:id="@+id/swtPlayingSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/nav_header_main_ShwPlayingSong"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorLink="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/txtListening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_main_Listening" />

</LinearLayout>
