<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gamal.echkofriends.SignIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtNamelbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_Nickname"
                android:textSize="@dimen/signin_lblTextSize"
                app:layout_constraintBottom_toBottomOf="@+id/txtName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtName" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="AleFlores"
                android:inputType="textPersonName"
                android:textSize="@dimen/signin_txtTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtNamelbl"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtEmaillbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/signup_Email"
                android:textSize="@dimen/signin_lblTextSize"
                app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtEmail" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="ale_flores@gmail.com"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/signin_txtTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtEmaillbl"
                app:layout_constraintTop_toBottomOf="@+id/txtName" />

            <TextView
                android:id="@+id/txtPasslbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/signup_Password"
                android:textSize="@dimen/signin_lblTextSize"
                app:layout_constraintBottom_toBottomOf="@+id/txtPass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtPass" />

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="123456789"
                android:inputType="textPassword"
                android:textSize="@dimen/signin_txtTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtPasslbl"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

            <TextView
                android:id="@+id/txtRepasslbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/signup_Repassword"
                android:textSize="@dimen/signin_lblTextSize"
                app:layout_constraintBottom_toBottomOf="@+id/txtRepass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtRepass" />

            <EditText
                android:id="@+id/txtRepass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="123456789"
                android:inputType="textPassword"
                android:textSize="@dimen/signin_txtTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtRepasslbl"
                app:layout_constraintTop_toBottomOf="@+id/txtPass" />

            <ImageView
                android:id="@+id/imgUserPhoto"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/btnBrowse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnBrowse"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/btnBrowse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_btnBrowse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgUserPhoto"
                app:layout_constraintTop_toBottomOf="@+id/txtRepass" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_btnSignUp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/signup_btnExit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
